@@ -99,6 +99,10 @@ No special treatment for history reset for obj only change
 Max restarts as parameter 0,1
 --- 22 jan full ---
 Use full strong branching for first instance
+--- 23 jan full ---
+Instead of full strong branching, increase efforts on reliability branching
+Update restart 1 score only if actually restarted.
+--- 24 jan full ---
 
 TODOs
 
